--- a/module_11/build.gradle
+++ b/module_11/build.gradle
@@ -15,7 +15,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
-
+    implementation 'org.thymeleaf:thymeleaf:3.0.12.RELEASE'
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.0.12.RELEASE'
 }
 
 test {
